INCLUDE_DIRECTORIES(
  ${CMAKE_SOURCE_DIR}/sobek
  ${CMAKE_SOURCE_DIR}/grendel
  )

SET(DIM 2 CACHE STRING "The dimension")

ADD_EXECUTABLE(sobek
  sobek.cc
  simpleloop.cc
  )
DEAL_II_SETUP_TARGET(sobek)
TARGET_LINK_LIBRARIES(sobek grendel)

SET_PROPERTY(TARGET sobek
  PROPERTY RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/run
  )

SET_PROPERTY(TARGET sobek APPEND PROPERTY COMPILE_DEFINITIONS
  DIM=${DIM}
  CMAKE_BUILD_TYPE="${CMAKE_BUILD_TYPE}"
  SOBEK_VERSION="${SOBEK_VERSION}"
  SOBEK_GIT_REVISION="${GIT_REVISION}"
  SOBEK_GIT_SHORTREV="${GIT_SHORTREV}"
  )
